# pm-search-bot

./: .env.example  .gitignore  ANALITIC_MODULE.md  NEW_APP.md  README.md
polymarket-bot/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  SERVER_CHECKS.md  alembic.ini  docker-compose.server.yml  docker-compose.yml  pyproject.toml  requirements.txt
polymarket-bot/app/: __init__.py  logger.py  main.py
polymarket-bot/app/analysis/: __init__.py  behavior_scorer.py  cluster_detector.py  network_detector.py  player_tracker.py  wallet_analyzer.py
polymarket-bot/app/api/: __init__.py  dashboard.py
polymarket-bot/app/config/: settings.py
polymarket-bot/app/db/: __init__.py  models.py  session.py
polymarket-bot/app/execution/: __init__.py  live_executor.py  paper_executor.py  trade_executor.py
polymarket-bot/app/ingestion/: __init__.py  clob_client.py  clob_ws.py  data_api_client.py  dune_client.py  dune_history_loader.py  gamma_client.py  history_loader.py  ingestion_service.py  market_sync.py  onchain_backfill.py  polygon_listener.py  trade_poller.py
polymarket-bot/app/notifications/: __init__.py  notifier.py  telegram_bot.py
polymarket-bot/app/signal/: __init__.py  exit_watcher.py  portfolio_state.py  risk_manager.py  signal_checker.py  signal_engine.py
polymarket-bot/app/tasks/: __init__.py  analysis_tasks.py  celery_app.py  exit_tasks.py  (+1 more)
polymarket-bot/tests/: test_cluster_detector.py  test_ingestion_normalisation.py  test_network_detector.py  test_player_tracker.py  test_scorer.py  test_signal_checker.py  test_wallet_analyzer.py
(+8 files in other folders)
